openhands-manifests/NetworkPolicy-openhands-postgresql.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: openhands
  name: openhands-postgresql
  labels:
    app.kubernetes.io/instance: openhands
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.4.0
    helm.sh/chart: postgresql-15.5.38
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: openhands
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - ports:
    - port: 5432
